--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cocktail Moctail</title>
+    <title>Gagan Yadav</title>
     <link rel="stylesheet" href="project2.css">
 
     <link rel="preconnect" href="https://fonts.gstatic.com">
